@@ -21,7 +21,7 @@ export(AE3, ab, allele.recode, a2g, asplot,
    LD22, LDkl, lambda1000, logit, log10p, logp,
    METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2, mhtplot2d, mhtplot3d, mhtplot.trunc, mht.control,
         mia, miamiplot, micombine, mtdt, mtdt2, muvar, mvmeta,
-   PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score,
+   PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score, pvalue,
    qqfun, qqunif,
    read.ms.output, revhap, revhap.i, ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA,
    s2k, se.exp, se.invlogit, sentinels, snp.ES, snp.HWE, snp.PAR, snptest_sample, solve_skol,
